--- a/lampada.html
+++ b/lampada.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lampada</title>
+    <link href="estilo.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
@@ -11,12 +12,13 @@
     </header>
 <main>
     <div>
-        <img src="lampada-apagada.jpg" alt="lampada Apagada" id="lamp">
+        <img src="./lampada-apagada.jpg" alt="lampada Apagada" id="lamp">
     </div>
     <div>
         <button id="ligar">Ligar</button>
         <button id="desligar">Desligar</button>
     </div>
 </main>
+<script scr="lamp.js"></script>
 </body>
 </html>
