--- a/lampada.html
+++ b/lampada.html
@@ -19,6 +19,6 @@
         <button id="desligar">Desligar</button>
     </div>
 </main>
-<script scr="lamp.js"></script>
+<script src="lamp.js"></script>
 </body>
-</html>
+</html> 
